Overrides legacy rule to solve layout issue
Legacy rules were conflicting with current layout.

mario h.
node/61576

--- a/sites/all/themes/slac/sass/pages.scss
+++ b/sites/all/themes/slac/sass/pages.scss
@@ -380,7 +380,7 @@ a {
     #content{
       padding-top: 50px;
     }
-    #content > div,
+
     #content > article{
       width: 94%;
       margin: 0 3%;
